Fix #8 Added forgotten source code :)
Previous commit just added generated static site and a page template.

--- a/templates/body.html
+++ b/templates/body.html
@@ -91,7 +91,7 @@
                   psf = '<a href="https://www.python.org/psf-landing/" target="_blank" class="external">%s</a>' % _('Python Software foundation')) }}
             <br/>
              {{ _('PyCon SK is organized by volunteers from %(spy)s.',
-                  spy = '<a href="https://spy.python.sk" target="_blank" class="external">%s</a>' % _('SPy o.z.')) }}
+                  spy = '<a href="https://spy.python.sk" target="_blank" class="external">%s</a>' % _('SPy o.z.')) }} {{ _('Our <a href="%(url)s">Privacy Policy</a>.', url=url_for('privacy_policy', lang_code=lang_code)) }}
             <br/><span class="oi oi-bug"></span>
              {{ _('Found a bug? Missing some information? This is community managed website, contribute at our %(github)s.',
                   github = '<a href="https://github.com/pyconsk/2018.pycon.sk" target="_blank" class="external">GitHub</a>') }}
