Fixed bronekn GA script, refactored structure of  the project
* Refactored GA code to be loaded by Firefox
* Added support for external sites tracking, marked links for external sites
* Updated translation strings
* Updated JS libs to be loaded locally instead of CDN
* Cleaned up static path and libs
* Regenerated static site

--- a/templates/mailchimp.html
+++ b/templates/mailchimp.html
@@ -34,7 +34,7 @@
         <p>
           <small>{{ _('We use Mailchimp as our marketing platform.') }} {{ _('By clicking below to subscribe, you
             acknowledge that your information will be transferred to Mailchimp for processing.') }} {{ _('Learn more
-            about Mailchimp\'s privacy practices <a href="https://mailchimp.com/legal/" target="_blank">here</a>.') }}
+            about Mailchimp\'s privacy practices <a href="https://mailchimp.com/legal/" target="_blank" class="external">here</a>.') }}
           </small>
         </p>
       </div>
@@ -48,7 +48,7 @@
 
       <hr/>
 
-        <a href="https://us12.campaign-archive.com/home/?u=89d883ce643e7200aabe34fa1&id=e1520cb152" title="{{ _('View previous campaigns.') }}">
+        <a href="https://us12.campaign-archive.com/home/?u=89d883ce643e7200aabe34fa1&id=e1520cb152" class="external" title="{{ _('View previous campaigns.') }}">
           {{ _('View previous campaigns.') }}</a>
 
     </form>
