Updated GA tracking code and minimized the JS lib

--- a/templates/body.html
+++ b/templates/body.html
@@ -104,7 +104,7 @@
     <script src="{{ url_for('static', filename='jquery/jquery-3.3.1.slim.min.js') }}"></script>
     <script src="{{ url_for('static', filename='popper/popper.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
-    <script async src="{{ url_for('static', filename='pyconsk/js/ga.js') }}"></script>
+    <script async src="{{ url_for('static', filename='pyconsk/js/ga.min.js') }}"></script>
   </body>
 </html>
 
