--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -5,7 +5,7 @@
   <div class="row featurette">
     <div class="col-md-12">
 
-      <h1 class="featurette-heading">{{ _('How do you get to Slovak PyCon?') }}</h1>
+      <h1 class="featurette-heading">{{ _('Why become a sponsor?') }}</h1>
       <p class="lead">{{ _('We need you — PyCon SK 2018 in Bratislava seeks for sponsors and partners!') }}</p>
 
       <p class="text-justify">
