--- a/templates/cfp.html
+++ b/templates/cfp.html
@@ -28,13 +28,13 @@
       <div class="row">
 
         <div class="col-md-6">
-          <h3><i class="icon-flight" aria-hidden="true"></i> {{ _('Talks') }}</h3>
+          <h3><span class="oi oi-bullhorn"></span> {{ _('Talks') }}</h3>
           <p class="text-justify">
             {{ _('Most talks are 30 minutes long, but we do offer a limited number of 45-minute slots for important topics that promise to benefit from a more extensive treatment.') }}
           </p>
         </div>
         <div class="col-md-6">
-          <h3><i class="icon-flight" aria-hidden="true"></i> {{ _('Workshops') }}</h3>
+          <h3><span class="oi oi-wrench"></span> {{ _('Workshops') }}</h3>
           <p class="text-justify">
             {{ _('As with the talks, we are looking for tutorials that can grow this community at any level! We aim for tutorials that will advance Python, advance this community, and shape the future. As tutorials are longer than talks and are in an interactive classroom-like setting, they require much more preparation.') }}
           </p>
@@ -45,5 +45,6 @@
 
     </div>
   </div>
+
 </div>
 {% endblock %}
