--- a/templates/cfp.html
+++ b/templates/cfp.html
@@ -6,7 +6,7 @@
     <div class="col-md-12">
 
       <h1 class="featurette-heading">{{ _('Call for proposals') }}</h1>
-      <p class="lead"><strong>{{ _('The Call For Proposals is open!') }}</strong></p>
+      <p class="lead"><strong>{{ _('The Call For Proposals will open soon!') }}</strong></p>
 
       <p class="text-justify">
         {{ _('PyCon is organized by the Python community and for the Python community. You\'re coming to the event, and that makes you part of the community. If you\'ve done something that you think other people might be interested in, or that you think they should know about, please do consider telling us about it. We don\'t just want to hear from the experts or famous names - other perspectives are just as valuable, so don\'t let the idea that you\'re not expert or famous enough stop you. This is your invitation to submit a talk proposal if you haven\'t spoken at the conference before. First-time speakers talk proposals are preferred.') }}
@@ -17,6 +17,7 @@
         {{ _('We are glad you are interested in giving a talk at PyCon SK 2019! Submit your talk proposal with short abstract and your bio. All selected speakers get a complimentary ticket to the conference.') }}
       </p>
       <p class="text-justify">
+        {{ _('Call for proposals for PyCon SK 2019 will open 16th of October 2018.') }}
         {{ _('The deadline for submissions is the end of 14th February 2019. If you have any questions, please contact us via email: info@pycon.sk or join our Slack channel') }}
       </p>
 
