Updated page styling, added icons

--- a/templates/venue.html
+++ b/templates/venue.html
@@ -8,7 +8,7 @@
       <h1 class="featurette-heading">{{ _('How do you get to Slovak PyCon?') }}</h1>
       <p class="lead">{{ _('<strong>Fourth year</strong> will happen <strong>22-24th March, 2019 in Bratislava</strong>.') }}</p>
 
-      <h2 class="featurette-heading">{{ _('Venue Address') }}</h2>
+      <h2>{{ _('Venue Address') }}</h2>
       <p class="text-justify">
         {{ _('Slovak University of Technology in Bratislava') }}<br />
         {{ _('Faculty of Informatics and Information Technologies') }}<br />
@@ -16,7 +16,7 @@
         842 16 Bratislava 4
       </p>
 
-      <h2 class="featurette-heading">{{ _('Travelling to Bratislava') }}</h2>
+      <h2>{{ _('Travelling to Bratislava') }}</h2>
       <p class="text-justify">
         {{ _('Bratislava is one of the youngest major cities in Europe. Nevertheless, it has a rich history of a free royal coronation town. At that time, it was still called the Pressburg (Prešpork). Today, Bratislava is a major transport hub in Central Europe, and there are plenty of possibilities of getting here.') }}
       </p>
@@ -24,7 +24,7 @@
       <div class="row">
 
         <div class="col-md-6">
-          <h3><i class="icon-flight" aria-hidden="true"></i> {{ _('By air') }}</h3>
+          <h3>{{ _('By air') }}</h3>
           <p class="text-justify">
             {{ _('If you are travelling to Bratislava, you can fly to the Bratislava airport (airport code: BTS) or the Vienna airport (airport code: VIE). The selection of flights to Vienna is better than to Bratislava.') }}
           </p>
@@ -33,7 +33,7 @@
           </p>
         </div>
         <div class="col-md-6">
-          <h3><i class="icon-cab" aria-hidden="true"></i> {{ _('By car') }}</h3>
+          <h3>{{ _('By car') }}</h3>
           <p class="text-justify">
           <ul>
             <li>{{ _('From Vienna, take highway A4, heading to Schwechat airport, when possible take the exit that leads to highway A6, which heads towards Bratislava.') }}</li>
@@ -44,7 +44,7 @@
           </p>
         </div>
         <div class="col-md-6">
-          <h3><i class="icon-bus" aria-hidden="true"></i> {{ _('By bus') }}</h3>
+          <h3>{{ _('By bus') }}</h3>
           <p class="text-justify">
             {{ _('All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kiev have direct bus connections.') }}
           </p>
@@ -53,7 +53,7 @@
           </p>
         </div>
         <div class="col-md-6">
-          <h3><i class="icon-train" aria-hidden="true"></i> {{ _('By train') }}</h3>
+          <h3>{{ _('By train') }}</h3>
           <p class="text-justify">
             {{ _('All neighboring capital cities Vienna, Prague, Budapest, Warsaw and Kiev have direct train connections.') }}
           </p>
@@ -64,12 +64,12 @@
 
       </div>
 
-      <h2 class="featurette-heading">{{ _('Accommodation') }}</h2>
+      <h2>{{ _('Accommodation') }}</h2>
       <p class="text-justify">
         {{ _('There are plenty of opportunities for accommodation in Bratislava. From coach surfing, Airbnb to hostels and five star hotels. Even though it is not the main tourist season, we advise you to book your accommodations in advance.') }}
       </p>
 
-      <h2 class="featurette-heading">{{ _('Guide') }}</h2>
+      <h2>{{ _('Guide') }}</h2>
       <p class="text-justify">
         {{ _('Bratislava offers much more than just PyCon. If you decide to stay in Bratislava a few days longer, have a look at <a href="http://mpba.sk/en" title="M_P_ BA: alternative Bratislava map" target="_blank" class="external">M_P_ BA</a> (alternative map of Bratislava) which lists popular attractions as well as unusual destinations within the city. Check out peoples\' comments to find out about each location or event.') }}
       </p>
