--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -24,34 +24,50 @@
         {{ _('Do not hesitate to contact us. We are flexible and willing to work with you to design a sponsorship package that is going to meet your business needs.') }}
       </p>
 
-      <p class="text-justify">
+      <p class="text-center">
         <a href="mailto:sponsors@pycon.sk">sponsors@pycon.sk</a>
       </p>
 
-      <h2 class="featurette-heading">{{ _('Marketing') }}</h2>
-      <p class="text-justify">
-        {{ _('Looking for new users for your product? Such people can be found at PyCon - they also will look for new products and ideas.') }}
-      </p>
+      <div class="row">
+        <div class="col">
+          <h3><span class="oi oi-bar-chart"></span> {{ _('Marketing') }}</h3>
+          <p class="text-justify">
+            {{ _('Looking for new users for your product? Such people can be found at PyCon - they also will look for new products and ideas.') }}
+          </p>
+        </div>
 
-      <h2 class="featurette-heading">{{ _('Recruitment') }}</h2>
-      <p class="text-justify">
-        {{ _('Are you looking for programmers? PyCon is the best place for meeting new talents. Many participants will be experienced developers looking for their next big career move.') }}
-      </p>
+        <div class="col">
+          <h3><span class="oi oi-briefcase"></span> {{ _('Recruitment') }}</h3>
+          <p class="text-justify">
+            {{ _('Are you looking for programmers? PyCon is the best place for meeting new talents. Many participants will be experienced developers looking for their next big career move.') }}
+          </p>
+        </div>
+      </div>
 
-      <h2 class="featurette-heading">{{ _('Audience') }}</h2>
-      <p class="text-justify">
-        {{ _('Want to get your message across to the people, so they talk about you? PyCon is a great opportunity. People in the Python community like to discover and share new things.') }}
-      </p>
+      <div class="row">
+        <div class="col">
+          <h3><span class="oi oi-eye"></span> {{ _('Audience') }}</h3>
+          <p class="text-justify">
+            {{ _('Want to get your message across to the people, so they talk about you? PyCon is a great opportunity. People in the Python community like to discover and share new things.') }}
+          </p>
+        </div>
 
-      <h2 class="featurette-heading">{{ _('Community') }}</h2>
-      <p class="text-justify">
-        {{ _('Looking for new contributors and partners for your open source project? PyCon is the place, where they also will look for you.') }}
-      </p>
+        <div class="col">
+          <h3><span class="oi oi-people"></span> {{ _('Community') }}</h3>
+          <p class="text-justify">
+            {{ _('Looking for new contributors and partners for your open source project? PyCon is the place, where they also will look for you.') }}
+          </p>
+        </div>
+      </div>
 
-      <h2 class="featurette-heading">{{ _('Support') }}</h2>
-      <p class="text-justify">
-        {{ _('Are you using Python in your company? Support for community events is an excellent opportunity to contribute back.') }}
-      </p>
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <h3><span class="oi oi-heart"></span> {{ _('Support') }}</h3>
+          <p class="text-justify">
+            {{ _('Are you using Python in your company? Support for community events is an excellent opportunity to contribute back.') }}
+          </p>
+        </div>
+      </div>
 
     </div>
   </div>
