--- a/templates/cfp.html
+++ b/templates/cfp.html
@@ -40,6 +40,12 @@
             {{ _('As with the talks, we are looking for tutorials that can grow this community at any level! We aim for tutorials that will advance Python, advance this community, and shape the future. As tutorials are longer than talks and are in an interactive classroom-like setting, they require much more preparation.') }}
           </p>
         </div>
+        <div class="col">
+          <h3><span class="oi oi-camera-slr"></span> {{ _('Recording release') }}</h3>
+          <p class="text-justify">
+            <a href="{{ url_for('recording', lang_code=lang_code) }}">Recording release</a>
+          </p>
+        </div>
 
       </div>
 
