some typos fixed

--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -24,7 +24,7 @@
         <div class="row featurette">
           <div class="col-md-8 order-md-2">
             <h2>{{ _('Speakers and Lecturers') }}</h2>
-            <p class="lead">{{ _('Our speakers are the best. A they do it for free! However, we have to pay for their
+            <p class="lead">{{ _('Our speakers are the best. And they do it for free! However, we have to pay for their
               conference ticket and sometimes we cover the travel budget.') }}</p>
             <p>{{ _('Expenses for flight tickets and hotel in Bratislava are a big part of our budget. We also do cover all
               the costs of recording and releasing the all of the talks.') }}</p>
@@ -41,7 +41,7 @@
             <h2>{{ _('Community & Inclusion') }}</h2>
             <p class="lead">{{ _('PyCon is a special type of conference - it is organised by the community for the community') }}
               <span class="oi oi-heart"></span></p>
-            <p>{{ _('By attening, you have a chance to meet like minded people and hear a lot of interesting stories. However,
+            <p>{{ _('By attending, you have a chance to meet like minded people and hear a lot of interesting stories. However,
               for those who can not afford to attend because of financial reasons we have opened a financial aid scheme
               and give free tickets.') }}
             <p>
@@ -102,7 +102,7 @@
             <h2>{{ _('Lunch') }}</h2>
             <p class="lead">{{ _('During all three days, a variety of warm food will be served for lunch') }}</p>
             <p>{{ _('Meat and vegetarian alternatives will be available.') }}</p>
-            <p>{{ _('We also try to be as eco friendly as possible, and so we server food on ceramic plates, eat with metal
+            <p>{{ _('We also try to be as eco friendly as possible, and so we serve food on ceramic plates, eat with metal
               cutlery and drink water from reusable plastic bottles.') }}</p>
           </div>
           <div class="col-md-4">
@@ -141,7 +141,7 @@
               on.') }}
             <p>
             <p>{{ _('Within several weeks you will be informed which school received the kit and after several months we will
-              inform you how succeessful were the students at creating their own hardware projects with the provided
+              inform you how successful were the students at creating their own hardware projects with the provided
               kits. More details about the project can be found in this <a href="%(pdf)s" target="_blank">PDF</a>. During PyCon SK 2019 there
               will be several presentations and workshops connected to the <i>Teaching with Hardware</i> project.', pdf='#') }}
             <p>
