Added page Call for Volunteers fix #38

--- a/templates/cfp.html
+++ b/templates/cfp.html
@@ -6,10 +6,11 @@
     <div class="col-md-12">
 
       <h1 class="featurette-heading">{{ _('Call for proposals') }}</h1>
-      <p class="lead"><strong>{{ _('The Call For Proposals will open soon!') }}</strong></p>
+      <p class="lead"><strong>{{ _('The Call For Proposals is open!') }}</strong></p>
 
       <p class="text-justify">
-        {{ _('PyCon is organized by the Python community and for the Python community. You\'re coming to the event, and that makes you part of the community. If you\'ve done something that you think other people might be interested in, or that you think they should know about, please do consider telling us about it. We don\'t just want to hear from the experts or famous names - other perspectives are just as valuable, so don\'t let the idea that you\'re not expert or famous enough stop you. This is your invitation to submit a talk proposal if you haven\'t spoken at the conference before. First-time speakers talk proposals are preferred.') }}
+        {{ _('PyCon SK is organized by the Python community and for the Python community.') }}
+        {{ _('You\'re coming to the event, and that makes you part of the community. If you\'ve done something that you think other people might be interested in, or that you think they should know about, please do consider telling us about it. We don\'t just want to hear from the experts or famous names - other perspectives are just as valuable, so don\'t let the idea that you\'re not expert or famous enough stop you. This is your invitation to submit a talk proposal if you haven\'t spoken at the conference before. First-time speakers talk proposals are preferred.') }}
       </p>
 
       <h2>{{ _('Where to submit your proposal') }}</h2>
