--- a/templates/body.html
+++ b/templates/body.html
@@ -53,6 +53,9 @@
             <li class="nav-item {{ li_cfp }}">
               <a href="{{ url_for('cfp', lang_code=lang_code) }}" class="nav-link">{{ _('Call for proposals') }}</a>
             </li>
+            <li class="nav-item {{ li_cfv }}">
+              <a href="{{ url_for('cfv', lang_code=lang_code) }}" class="nav-link">{{ _('Call for volunteers') }}</a>
+            </li>
             <li class="nav-item {{ li_sponsoring }}">
               <a href="{{ url_for('sponsoring', lang_code=lang_code) }}" class="nav-link">{{ _('Sponsoring') }}</a>
             </li>
