Refactored CfP form into separate page and updated links

--- a/templates/recording.html
+++ b/templates/recording.html
@@ -35,6 +35,11 @@
         <li>{{ _('I, the Submitter, specifically affirm the right to perform the User Submissions on the SPy o.z. web sites or on other web sites designated by the PSF (including, but not necessarily limited to YouTube).') }}</li>
       </ul>
       </p>
+
+      <p class="text-center">
+        <a href="{{ url_for('cfp_form', lang_code=lang_code) }}" class="btn btn-primary btn-lg"><span class="oi oi-star"></span> {{ _('Submit your proposal') }} <span class="oi oi-star"></span></a>
+      </p>
+
     </div>
   </div>
 </div>
