--- a/templates/cfp.html
+++ b/templates/cfp.html
@@ -23,7 +23,7 @@
       </p>
 
       <p class="text-center">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSdzKJ7FAYDfAYFZEeNrs2rQMYMM_FDFOcu1tgvIQO-kzLczuA/viewform?usp=sf_link" target="_blank" class="btn btn-primary btn-lg"><span class="oi oi-star"></span> {{ _('Submit your proposal') }} <span class="oi oi-star"></span></a>
+        <a href="{{ url_for('cfp_form', lang_code=lang_code) }}" class="btn btn-primary btn-lg"><span class="oi oi-star"></span> {{ _('Submit your proposal') }} <span class="oi oi-star"></span></a>
       </p>
 
       <h2>{{ _('Guidelines for Proposal Submission') }}</h2>
@@ -56,7 +56,7 @@
         {{ _('By submitting your talk or workshop proposal, or by signing up to give a lightning talk, you agree to give permission to the SPy o.z. to record, edit, and release audio and/or video of your presentation.') }}
       </p>
       <p class="text-center">
-        <a href="{{ url_for('recording', lang_code=lang_code) }}" class="btn btn-secondary"><span class="oi oi-camera-slr"></span> Full recording release statement</a>
+        <a href="{{ url_for('recording', lang_code=lang_code) }}" class="btn btn-secondary"><span class="oi oi-camera-slr"></span> {{ _('Full recording release statement') }}</a>
       </p>
 
     </div>
