--- a/templates/cfv.html
+++ b/templates/cfv.html
@@ -1,4 +1,10 @@
 {% extends "body.html" %}
+
+{% block include_js %}
+{#  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha256-2Pjr1OlpZMY6qesJM68t2v39t+lMLvxwpa8QlRjJroA=" crossorigin="anonymous"></script>#}
+{#  <script async src="{{ url_for('static', filename='pyconsk/js/form.js') }}"></script>#}
+{% endblock %}
+
 {% block content %}
 <div class="container marketing">
 
@@ -97,7 +103,9 @@
     -->
     <input type="hidden" name="pageHistory" value="0">
 
-    <input class="btn btn-primary" type="submit" value="Submit">
+    <p class="text-center">
+      <input class="btn btn-primary btn-lg" type="submit" value="{{ _('Submit') }}">
+    </p>
 </form>
 
     </div>
