Updated index page with some  news

--- a/templates/cfp.html
+++ b/templates/cfp.html
@@ -15,7 +15,8 @@
 
       <h2>{{ _('Where to submit your proposal') }}</h2>
       <p class="text-justify">
-        {{ _('We are glad you are interested in giving a talk at PyCon SK 2019! Submit your talk proposal with short abstract and your bio. All selected speakers get a complimentary ticket to the conference.') }}
+        {{ _('We are glad you are interested in giving a talk at PyCon SK 2019!') }}
+        {{ _('Submit your talk proposal with short abstract and your bio. All selected speakers get a complimentary ticket to the conference.') }}
       </p>
       <p class="text-justify">
         {{ _('Call for proposals for PyCon SK 2019 is open.') }}
