--- a/docs/static/pyconsk/css/pyconsk.css
+++ b/docs/static/pyconsk/css/pyconsk.css
@@ -9,11 +9,13 @@ body {
 }
 
 .logo {
-  margin-top: 50px;
-  width: 50%;
-  height: 50%;
+  width: 95%;
+  height: 95%;
 }
 
+.card {
+  margin-bottom: 1rem;
+}
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
@@ -59,6 +61,10 @@ body {
 
 /* Featurettes
 ------------------------- */
+
+.index-top {
+  margin-top: 7rem;
+}
 
 .featurette-divider {
   margin: 5rem 0; /* Space out the Bootstrap <hr> more */
