--- a/templates/cfv.html
+++ b/templates/cfv.html
@@ -16,13 +16,13 @@
 
       <p class="text-justify">
         {{ _('PyCon SK is organized by the Python community and for the Python community.') }}
-        {{ _('All of our staff members are volunteers. We are looking for a new memebers to join the team of organizers.') }}
+        {{ _('All of our staff members are volunteers. We are looking for a new members to join the team of organizers.') }}
         {{ _('This is great opportunity to meet people, make new friends and get the opportunity to learn new things.') }}
       </p>
 
       <p class="text-justify">
         {{ _('As a volunteer you get a free ticket to the  conference as a thank you for making the change  in our society.') }}
-        {{ _('If you send more than 40 hours during the year as a volunteer you can give 3%% to any registered non-profit in your tax return.') }}
+        {{ _('If you spend more than 40 hours during the year as a volunteer you can give 3%% to any registered non-profit in your tax return.') }}
       </p>
 
 <form action="https://docs.google.com/forms/d/e/1FAIpQLSf4bOJdE201B_VyhHrxP_z_Fq1IGLaqxnv7KZVAVQ-C30DFUA/formResponse"
