added schedule and edusummit pages

--- a/templates/edusummit.html
+++ b/templates/edusummit.html
@@ -34,11 +34,11 @@
         <ul>
           <li>{{ _('An advanced workshop with BBC micro:bit for teachers who already teach with micro:bits.') }}</li>
           <li>{{ _('A beginner\'s workshop with BBC micro:bit given by high school students') }}</li>
-          <li>{{ _('Workshop on using, creating and sharing Open Educational Resources for teachers') }}</li>
-          <li>{{ _('PyGame zero workshop for teachers') }}</li>
-          <li>{{ _('Control Minecraft via Python') }}</li>
-          <li>{{ _('Turn your BBC micro:bit into a Minecraft game controller') }}</li>
-          <li>{{ _('Parse Open Data with Python') }}</li>
+          <!-- <li>{{ _('Workshop on using, creating and sharing Open Educational Resources for teachers') }}</li> -->
+          <!-- <li>{{ _('Parse Open Data with Python') }}</li> -->
+          <!-- <li>{{ _('PyGame zero workshop for teachers') }}</li> -->
+          <!-- <li>{{ _('Control Minecraft via Python') }}</li> -->
+          <!-- <li>{{ _('Turn your BBC micro:bit into a Minecraft game controller') }}</li> -->
         </ul>
         <p>{{ _('We will add workshops for teachers on other topics aswell.') }}</p>
 
