--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -9,56 +9,56 @@
         <h1 class="featurette-heading">{{ _('Schedule') }}</h1>
 
         <div class="card">
-          <h5 class="card-header">What's on when (more details to be confirmed)</h5>
+          <h5 class="card-header">{{ _('What\'s on when (more details to be confirmed) ') }}</h5>
           <div class="card-body">
             <p class="card-text">
               <table class="table table-bordered">
                 <thead>
                   <tr>
-                    <th scope="col">Friday</th>
-                    <th scope="col">Saturday</th>
-                    <th scope="col">Sunday</th>
+                    <th scope="col">{{ _('Friday') }}</th>
+                    <th scope="col">{{ _('Saturday') }}</th>
+                    <th scope="col">{{ _('Sunday') }}</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td>Talks [EN track]</td>
-                    <td>Talks [both EN and SK]</td>
-                    <td>Talks [both EN and SK]</td>
+                    <td>{{ _('Talks [EN track]') }}</td>
+                    <td>{{ _('Talks [both EN and SK]') }}</td>
+                    <td>{{ _('Talks [both EN and SK]') }}</td>
                   </tr>
                   <tr>
-                    <td>Workshops [both EN and SK]</td>
-                    <td>Workshops [both EN and SK]</td>
-                    <td>Workshops [both EN and SK]</td>
+                    <td>{{ _('Workshops [both EN and SK]') }}</td>
+                    <td>{{ _('Workshops [both EN and SK]') }}</td>
+                    <td>{{ _('Workshops [both EN and SK]') }}</td>
                   </tr>
                   <tr>
-                    <td>SPy Cup Presentations [SK] <span class="badge badge-pill badge-success">Edu</span></td>
-                    <td>PyCon Cup Finals [EN] <span class="badge badge-pill badge-secondary">Conference Contest</span></td>
-                    <td>Sprints [both EN and SK]</td>
+                    <td>{{ _('SPy Cup Presentations [SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span></td>
+                    <td>{{ _('Conference Game Finals [EN] ') }}<span class="badge badge-pill badge-secondary">{{ _('Conference Contest') }}</span></td>
+                    <td>{{ _('Sprints [both EN and SK]') }}</td>
                   </tr>
                   <tr>
-                    <td>EduSummit Talks [SK] <span class="badge badge-pill badge-success">Edu</span></td>
-                    <td>EduSummit Workshops [SK] <span class="badge badge-pill badge-success">Edu</span></td>
+                    <td>{{ _('EduSummit Talks [SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span></td>
+                    <td>{{ _('EduSummit Workshops [SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>Python Cup [SK] <span class="badge badge-pill badge-success">Edu</span></td>
-                    <td>Young Coders' day [SK] <span class="badge badge-pill badge-success">Edu</span></td>
+                    <td>{{ _('Python Cup [SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span></td>
+                    <td>{{ _('Young Coders\' day [SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>EduSummit Poster Session [both EN and SK] <span class="badge badge-pill badge-success">Edu</span></td>
-                    <td>Main Poster session [both EN and SK]</td>
+                    <td>{{ _('EduSummit Poster Session [both EN and SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span></td>
+                    <td>{{ _('Main Poster session [both EN and SK]') }}</td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>Hardware Projects Showcase [both EN and SK] <span class="badge badge-pill badge-success">Edu</span></td>
-                    <td>International PyCon organizers meeting [EN]</td>
+                    <td>{{ _('Hardware Projects Showcase [both EN and SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span></td>
+                    <td>{{ _('International PyCon organizers meeting [EN]') }}</td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>Conference Party <span class="badge badge-pill badge-warning">Social Event</span></td>
-                    <td>Conference Dinner <span class="badge badge-pill badge-warning">Social Event</span></td>
+                    <td>{{ _('Conference Party ') }}<span class="badge badge-pill badge-warning">{{ _('Social Event') }}</span></td>
+                    <td>{{ _('Conference Dinner ') }}<span class="badge badge-pill badge-warning">{{ _('Social Event') }}</span></td>
                     <td></td>
                   </tr>
                 </tbody>
