Updated (and regenerated) Translations and added asteriks on forms

--- a/docs/static/pyconsk/css/pyconsk.css
+++ b/docs/static/pyconsk/css/pyconsk.css
@@ -42,6 +42,9 @@ body {
   height: 32rem;
 }
 
+.required {
+  color: red;
+}
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
