--- a/templates/cfv.html
+++ b/templates/cfv.html
@@ -30,7 +30,7 @@
       id="bootstrapForm"
       method="POST">
     <fieldset>
-        <legend for="">Email</legend>
+        <legend for="">Email <span class="required">*</span></legend>
         <div class="form-group">
             <input id="emailAddress" type="email" name="emailAddress" class="form-control" required>
         </div>
@@ -39,7 +39,7 @@
 
     <!-- Field type: "short" id: "2142309847" -->
     <fieldset>
-        <legend for="2142309847">{{ _('Your name') }}</legend>
+        <legend for="2142309847">{{ _('Your name') }} <span class="required">*</span></legend>
         <div class="form-group">
             <input id="1380932580" type="text" name="entry.1380932580" class="form-control" required>
         </div>
@@ -48,7 +48,7 @@
 
     <!-- Field type: "short" id: "214745337" -->
     <fieldset>
-        <legend for="214745337">{{ _('Your phone') }}</legend>
+        <legend for="214745337">{{ _('Your phone') }} <span class="required">*</span></legend>
         <div class="form-group">
             <input id="982333403" type="text" name="entry.982333403" class="form-control" required>
         </div>
@@ -67,7 +67,7 @@
 
     <!-- Field type: "short" id: "712730357" -->
     <fieldset>
-        <legend for="712730357">{{ _('What is your time estimate you can spend as volunteer?') }}</legend>
+        <legend for="712730357">{{ _('What is your time estimate you can spend as volunteer?') }} <span class="required">*</span></legend>
         <div class="form-group">
             <p class="help-block">{{ _('We need just rought estimate, for example: our daily, two hours a week...') }}</p>
             <input id="332887087" type="text" name="entry.332887087" class="form-control" required>
@@ -77,7 +77,7 @@
 
     <!-- Field type: "paragraph" id: "1780493620" -->
     <fieldset>
-        <legend for="1780493620">{{ _('What would you like to do?') }}</legend>
+        <legend for="1780493620">{{ _('What would you like to do?') }} <span class="required">*</span></legend>
         <div class="form-group">
             <p class="help-block">{{ _('Let us know what you are experienced in? If you have a vision and no experience, that is alright, write down what you would like to do and surely we\'ll find a tasks to realize the vision.') }}</p>
             <textarea id="287506974" name="entry.287506974" class="form-control" required></textarea>
@@ -87,7 +87,7 @@
 
     <!-- Field type: "short" id: "400429884" -->
     <fieldset>
-        <legend for="400429884">{{ _('Where did you find out about SPy o.z.?') }}</legend>
+        <legend for="400429884">{{ _('Where did you find out about SPy o.z.?') }} <span class="required">*</span></legend>
         <div class="form-group">
             <input id="1889735954" type="text" name="entry.1889735954" class="form-control" required>
         </div>
